<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fajar.testingonline.EditQuizActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/imagRujukan"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/text_no_soal"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/buttonCamera"
            android:layout_below="@+id/imagRujukan"
            android:layout_alignParentLeft="true"
            android:text="@string/take_picture"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/buttonchoiceFile"
            android:layout_below="@+id/imagRujukan"
            android:layout_alignParentRight="true"
            android:text="@string/choose_file"/>

        <TextView
            android:id="@+id/rujukanLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textRujukan"
            android:textSize="15dp"
            android:layout_below="@+id/buttonchoiceFile"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/link"
            android:inputType="textWebEditText"
            android:layout_below="@+id/rujukanLink"/>

        <Button
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:id="@+id/viewLink"
            android:text="@string/view"
            android:layout_below="@+id/link"
            android:layout_centerHorizontal="true"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="116dp"
        android:layout_below="@id/viewLink"
        android:id="@+id/tablelayout">

        <TableRow>

            <LinearLayout>
                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:text="1"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/editJawaban1"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout>
                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:text="2"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/editJawaban2"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp" />
            </LinearLayout>

        </TableRow>

        <TableRow>

            <LinearLayout>
                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:text="3"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/editJawaban3"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"/>
            </LinearLayout>

            <LinearLayout>
                <TextView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:text="4"
                    android:textSize="20dp"
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/editJawaban4"
                    android:layout_width="145dp"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"/>
            </LinearLayout>

        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:layout_below="@id/tablelayout"
        android:textStyle="bold"
        android:text="@string/text"/>
    <RadioGroup
        android:id="@+id/tableEdit"
        android:layout_below="@+id/text"
        android:layout_width="380dp"
        android:layout_height="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/edit_jawaban_benar_1"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="1"
            android:textColor="@color/black"
            android:layout_margin="3dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="1"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/edit_jawaban_benar_2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="3dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/edit_jawaban_benar_3"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="3dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="3"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <RadioButton
            android:id="@+id/edit_jawaban_benar_4"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_margin="3dp"
            android:padding="5dp"/>

        <TextView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:text="4"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </RadioGroup>
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/save"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>
</LinearLayout>
